--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,5 +12,5 @@ log = "0.4"
 env_logger = "0.11"
 libnotify = "1"
 glib = "0.4"
-ctrlc = "3"
+ctrlc = { version = "3", features = ["termination"] }
 users = "0.11"
