--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -9,6 +9,10 @@ prost-types = "0.14"
 tonic = "0.14"
 tonic-prost = "0.14"
 tonic-types = "0.14"
+anyhow = "1"
+chrono = "0.4"
+walkdir = "2"
+kamadak-exif = "0.6.1"
 
 [build-dependencies]
 tonic-prost-build = "0.14"
