--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -5,7 +5,14 @@ edition = "2024"
 
 [dependencies]
 lib = { path = "../lib" }
+clap = { version = "4", features = ["derive"] }
+log = "0.4"
+env_logger = "0.11"
+chrono = "0.4"
+walkdir = "2"
+anyhow = "1"
 prost = "0.14"
 tonic = "0.14"
 tonic-prost = "0.14"
-tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
+prost-types = "0.14"
+tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "fs"] }
